fix(mentors): avoid wrap for "Show" txt (#696)

--- a/styles/App.css
+++ b/styles/App.css
@@ -111,6 +111,10 @@ body {
   align-items: center;
 }
 
+.sui-results-per-page__label {
+  flex-shrink: 0;
+}
+
 @media only screen and (max-width: 800px) {
   .material-icons {
     font-size: 16px;
